fix: Problem with long lines not wrapping

--- a/npm/scss/article.scss
+++ b/npm/scss/article.scss
@@ -50,7 +50,7 @@
     .article-body {
       width: 100%;
       // background-color: white;
-      white-space: pre;
+      white-space: pre-wrap;
       font-family: MyEmojiFont,monospace;
       padding: 5px;
     }
